fixes for device push token

--- a/PositionIn/Base.lproj/Main.storyboard
+++ b/PositionIn/Base.lproj/Main.storyboard
@@ -442,7 +442,7 @@
             <objects>
                 <tableViewController id="9PQ-zJ-hEA" customClass="OrderViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="wKe-Ah-frR">
-                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -745,7 +745,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kJS-3G-KqG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3837" y="-878"/>
+            <point key="canvasLocation" x="3787" y="-716"/>
         </scene>
         <!--Emergency Details Controller-->
         <scene sceneID="NOv-N2-LSz">
@@ -822,7 +822,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Se8-GM-xNb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4499" y="-341"/>
+            <point key="canvasLocation" x="4851" y="-481"/>
         </scene>
         <!--Post-->
         <scene sceneID="jbP-64-jST">
@@ -1022,7 +1022,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mSi-Z8-bxF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2241" y="192"/>
+            <point key="canvasLocation" x="-2255" y="8"/>
         </scene>
         <!--My Profile Navigation Controller Scene-->
         <scene sceneID="3kT-1q-vQU">
@@ -1221,8 +1221,8 @@
         <image name="productClockAvailability" width="22" height="22"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="9u4-qy-iVR"/>
-        <segue reference="UGm-BP-OPQ"/>
-        <segue reference="OnQ-Ex-OI6"/>
+        <segue reference="jVg-bh-JyA"/>
+        <segue reference="sID-M8-MPA"/>
+        <segue reference="WXU-OU-n2l"/>
     </inferredMetricsTieBreakers>
 </document>
