--- a/PositionIn/VolunteerDetails/PositionIn.VolunteerDetailsViewController.xib
+++ b/PositionIn/VolunteerDetails/PositionIn.VolunteerDetailsViewController.xib
@@ -15,6 +15,7 @@
                 <outlet property="nameLabel" destination="h5N-l2-1UK" id="b6v-lw-ZfP"/>
                 <outlet property="priceLabel" destination="uPP-8M-282" id="1k5-l0-yFu"/>
                 <outlet property="productImageView" destination="8XI-vM-VVJ" id="uqX-7v-xAt"/>
+                <outlet property="view" destination="azT-EU-c68" id="pKp-Wi-k6N"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
