--- a/PositionIn/Views/ExploreCardCell/PositionIn.ExploreCardCell.xib
+++ b/PositionIn/Views/ExploreCardCell/PositionIn.ExploreCardCell.xib
@@ -18,8 +18,11 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="umJ-2H-3yl">
                         <rect key="frame" x="8" y="8" width="304" height="165.5"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0pT-aB-HBT">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0pT-aB-HBT">
                                 <rect key="frame" x="0.0" y="0.0" width="304" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="pvo-Io-WHF"/>
+                                </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CAJ-3z-s5t">
                                 <rect key="frame" x="8" y="88" width="40" height="40"/>
@@ -86,6 +89,7 @@
                 <outlet property="feedItemImageView" destination="0pT-aB-HBT" id="RKk-2B-J5U"/>
                 <outlet property="feedItemLogoImageView" destination="CAJ-3z-s5t" id="OCi-gr-gNC"/>
                 <outlet property="headerLabel" destination="ekZ-BY-Ygt" id="DV9-NB-eog"/>
+                <outlet property="imageHeightConstaint" destination="pvo-Io-WHF" id="SEi-1b-eGr"/>
                 <outlet property="infoLabel" destination="sWQ-1j-zOn" id="JSr-n4-B6h"/>
             </connections>
             <point key="canvasLocation" x="215" y="321"/>
