fixes for new flows

--- a/PositionIn/Base.lproj/Main.storyboard
+++ b/PositionIn/Base.lproj/Main.storyboard
@@ -1251,6 +1251,6 @@
     <inferredMetricsTieBreakers>
         <segue reference="WXU-OU-n2l"/>
         <segue reference="sID-M8-MPA"/>
-        <segue reference="BWc-h1-rTN"/>
+        <segue reference="1fL-aw-xyq"/>
     </inferredMetricsTieBreakers>
 </document>
