--- a/PositionIn/Views/ExploreCardCell/PositionIn.ExploreCardCell.xib
+++ b/PositionIn/Views/ExploreCardCell/PositionIn.ExploreCardCell.xib
@@ -70,12 +70,13 @@
                             <constraint firstAttribute="trailing" secondItem="sWQ-1j-zOn" secondAttribute="trailing" constant="8" id="ytB-ir-E82"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadious">
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                 <integer key="value" value="3"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
                 </subviews>
+                <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
                     <constraint firstItem="umJ-2H-3yl" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="1rO-uT-krj"/>
                     <constraint firstItem="umJ-2H-3yl" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="93S-YS-5xi"/>
